# molecule-generation

./: .gitignore  evaluate.py  main.py  moses_dataset.py  print_param_counts.py  pyproject.toml
models/: encoder.py  flows.py  gvae.py  gvae_ar.py  gvae_nf.py  vae.py
models/fast_jtnn/: __init__.py  chemutils.py  datautils.py  jtmpn.py  jtnn_dec.py  jtnn_enc.py  jtnn_vae.py  mol_tree.py  mpn.py  nnutils.py  vocab.py
models/frattvae/: __init__.py  dataset.py  model.py
models/frattvae/utils/: construct.py  decompose.py  fragmentation.py  mask.py  medchemfrag.py  metrics.py  preprocess.py  tree.py
training/: __init__.py  frattvae.py  gvae.py  gvae_ar.py  gvae_nf.py
utils/: constants.py  properties.py  utils.py
